styles.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Inter', sans-serif;

  --primary-t-blue: rgb(23, 43, 77);
  --primary-t-green: rgb(54, 179, 126);
  --secondary-t-green: rgb(58, 74, 66);
  --secondary-b-light: rgb(235, 240, 238);
  --secondary-b-dark: rgb(208, 217, 212);
}

header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  margin: 0 auto;
  padding: 0 1rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: rgba(255, 255, 255, 0.8);
}

.logo-container {
  padding: 0.6rem 0.8rem;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 600;
}

.logo-container a {
  text-decoration: none;
  color: rgb(40, 53, 47);
  font-size: 1.4rem;
  text-align: center;
  font-weight: 600;
}

#hamburger {
  padding: 0.65rem;
  background-color: transparent;
  border: none;
}

.headline {
  margin-top: 1rem;
  width: 100vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 3.25rem;
  background: url(icon-img/header-illsutration-mobile.svg) no-repeat;
  background-size: 100% 100%;
}

.heading {
  margin: 0 auto;
  padding-top: 25%;
  width: 80%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 2rem;
  text-align: center;
}

h1 {
  font-size: 2.25rem;
  color: var(--primary-t-blue);
}

h2 {
  margin-top: -1.5rem;
  font-size: 2.25rem;
  color: var(--primary-t-green);
}

p {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  color: var(--primary-t-blue);
}

.headline > ul {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.25rem;
}

li {
  list-style: none;
}

.action-btn-sec {
  margin: 0 auto;
  padding: 0.4rem 0.5rem;
  background-color: transparent;
  border: 1px solid rgb(223, 225, 230);
  border-radius: 2rem;
}

.action-btn-sec:hover {
  cursor: pointer;
  box-shadow: 0 8px 16px 0 rgba(30, 72, 143, 0.239);
}

.media-link img,
.action-btn img {
  width: 1.25rem;
}

/* Works Section Starts Here */
.works-section {
  margin: 0 auto;
  padding: 4rem 1rem;
  text-align: center;
}

.works-section > h2 {
  color: var(--primary-t-blue);
  text-align: center;
}

.works-grid-container {
  margin-top: 2rem;
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: 1fr;
  row-gap: 1rem;
  align-content: center;
}

.works-grid-card {
  padding-top: 14rem;
  width: 100%;
  background-color: var(--secondary-b-light);
  border: 1px solid var(--secondary-b-dark);
  border-radius: 0.5rem;
}

.works-card-meta {
  width: 100%;
  padding: 1rem 0.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  text-align: center;
  background-color: white;
  border-radius: 0.5rem;
}

.works-card-meta > h3 {
  font-size: 1.5rem;
  font-weight: 600;
  line-height: 2rem;
  color: var(--secondary-t-green);
}

.work-categories {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.45rem;
}

.work-categories > li {
  padding: 0.5rem 0.5rem;
  font-size: 0.66rem;
  font-weight: 600;
  letter-spacing: 0.03em;
  color: var(--secondary-t-green);
  background-color: var(--secondary-b-light);
  border-radius: 0.25rem;
}

.action-btn {
  display: block;
  width: fit-content;
  margin: 0.5rem auto;
  padding: 0.8rem;
  font-size: 0.88rem;
  letter-spacing: 0.03em;
  color: white;
  text-decoration: none;
  background-color: var(--primary-t-green);
  border-radius: 0.25rem;
}

.action-btn:hover {
  cursor: pointer;
  box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
}

/* About Me Section */
.about-section {
  margin: 0 auto;
  padding: 1rem;
  text-align: center;
}

.about-section > h2 {
  margin-top: 0;
  color: var(--primary-t-blue);
}

.about-section > p {
  margin-bottom: 2rem;
  font-size: 1.05rem;
  font-weight: 400;
  color: var(--primary-t-blue);
}

.about-bg-img-container {
  position: relative;
}

.about-bg-img-1 {
  position: absolute;
  left: -1rem;
  top: 13rem;
}

.about-bg-img-2 {
  position: absolute;
  right: -1rem;
  top: -4rem;
}

.about-grid-container {
  padding-top: 4rem;
  display: grid;
  grid-template-columns: 100%;
  grid-template-rows: 1fr;
  row-gap: 1rem;
  align-content: center;
}

.about-grid-card {
  padding: 2.5rem 1rem 4rem;
  width: 100%;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  text-align: center;
  background-color: var(--secondary-b-light);
  border: 1px solid var(--secondary-b-dark);
  border-radius: 0.5rem;
}

.about-img-container {
  margin-bottom: 3.5rem;
  padding: 0.8rem 1rem;
  background: white;
  border-radius: 100%;
  box-shadow: 0 8px 16px 0 rgba(30, 72, 143, 0.239);
}

.about-grid-card > h3 {
  font-size: 1.5rem;
  font-weight: 600;
  line-height: 2rem;
  color: var(--primary-t-blue);
}

.about-categories {
  margin-top: 1.5rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
}

.about-categories > li {
  padding: 0.5rem 0.5rem;
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.03em;
  color: var(--primary-t-green);
  background-color: white;
  border-radius: 0.25rem;
}

/* Contact Section */
.contact-section {
  position: relative;
  margin: 0 auto;
  padding: 2.5rem 1rem 4rem;
  text-align: center;
}

.contact-section > h2 {
  margin: 0 auto;
  width: 90%;
  color: var(--primary-t-blue);
}

#contact-form {
  padding: 3.5rem 0;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

input,
#client-msg {
  padding: 0.75rem;
  color: --secondary-b-dark;
  border: 1px solid var(--secondary-b-dark);
  border-radius: 0.25rem;
}

#client-msg {
  border-color: var(--primary-t-green);
}

#contact-form > button {
  border: none;
}

.contact-section > ul {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.25rem;
}

.contact-section > span {
  display: block;
  margin-top: 0.8rem;
  color: rgb(66, 82, 110);
}

.contact-bg {
  position: absolute;
  right: 0;
  bottom: 6rem;
  width: 3.5rem;
  height: 8rem;
  background: url(icon-img/contact-bg.svg) no-repeat;
}

